feat(SPA): updated the html and css code for signin page

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -31,6 +31,7 @@ $commonBlue: #41a2d0;
 $blue: #3f51b5;
 $fordGray: #979797;
 $backGroundColor: #f0efef;
+$bgColor: #3930d829;
 $onHoverBlack: #444444;
 $scrollBg: rgba(170, 170, 170, 0.6);
 
